Archive2/d5/4f1fec7cb30b4f/output
main.cpp: In function 'int main()':
main.cpp:34:5: error: expected ';' before '}' token
     }
     ^
main.cpp:33:50: warning: statement has no effect [-Wunused-value]
         (stride - (stride * elemCount) % stride) % stride
                                                  ^
